# pure-cpp

./: .gitignore  .gitlab-ci.yml  .travis.yml  CMakeLists.txt  README.md  conanfile.py
doc/: CMakeLists.txt  Doxygen.config
include/pure/: constructors.hpp  core.hpp  exceptions.hpp  functions.hpp  macros.hpp  symbolic_sets.hpp  traits.hpp  type_class.hpp
include/pure/impl/: Trait_Arithmetic.hpp  Trait_CString.hpp  Trait_Compare.hpp  Trait_Enumerable.hpp  Trait_Error.hpp  Trait_From_Var.hpp  Trait_Functional.hpp  Trait_Hash.hpp  Trait_Object.hpp  Trait_Print.hpp  Trait_Static_Disjunct.hpp  Trait_Stream.hpp  Trait_To_Var.hpp  Trait_Type_Union.hpp  Trait_Type_Variants.hpp  Trait_Value.hpp
include/pure/object/: basic_string.hpp  basic_vector.hpp  boxed.hpp  interface.hpp  persistent_map.hpp  persistent_vector.hpp
include/pure/support/: create.hpp  endian.hpp  enumerator.hpp  file_stream.hpp  hashing.hpp  identifier.hpp  immer_compat.hpp  misc.hpp  record.hpp  ref_count.hpp  string_builder.hpp  transience.hpp  tuple.hpp  type_utilities.hpp  utf8.hpp
include/pure/types/: any.hpp  immediate.hpp  interned.hpp  maybe.hpp  nil.hpp  restrict.hpp  shared.hpp  some.hpp  string.hpp  unique.hpp  var.hpp  weak.hpp
test/: CMakeLists.txt  pure-cpp-test.cpp  readme-example.cpp
test_package/: CMakeLists.txt  conanfile.py  test.cpp
